Fix edit button alignment on mobile and desktop
Fixes: #1734

--- a/static/css/layout/index.less
+++ b/static/css/layout/index.less
@@ -15,9 +15,3 @@ div.contentBody {
 section {
   margin-bottom: 20px;
 }
-
-@media all and ( min-width: @width-breakpoint-desktop ) {
-  #contentHead {
-    max-width: 918px;
-  }
-}
